--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -34,4 +34,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/betaSandwich-rocker:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/betasandwich-rocker:latest
